# qless-solver

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  nixpacks.toml  pyproject.toml  railway.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cli/qless_solver/: __init__.py  cli.py  dice.py  dictionary.py  finder.py  generator.py  grid_solver.py  image_detection.py  preprocess.py  solver.py
docs/: grid_based_solver_design.md
qless_solver/: __init__.py  cli.py  dice.py  dictionary.py  generator.py  solver.py
scripts/: debug_contours.py  generate_golden_file.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_ui_default_grid.py  test_web_api.py
tests/unit/: test_dice.py  test_dictionary.py  test_generator.py  test_grid_solver.py  test_image_detection.py  test_solver.py
web/: main.py
web/templates/: index.html  results_snippet.html
